<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">State Capitals Quiz</string>

    <!-- Default strings needed by Android Studio template -->
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet...</string>

    <!-- Our app's strings -->
    <string name="quiz_title">State Capitals Quiz</string>
    <string name="quiz_description">Test your knowledge of all 50 US state capitals!</string>
    <string name="quiz_rules">Quiz Rules:\n\n• Each quiz consists of 6 random state capital questions\n\n• For each state, choose the correct capital city from three options\n\n• Use the left swipe gesture or Next button to submit your answer and continue\n\n• Your final score will be shown after completing all questions\n\n• You can view your past quiz results at any time</string>

    <string name="start_quiz">Start New Quiz</string>
    <string name="view_results">View Past Results</string>
    <string name="question_format">What is the capital of %1$s?</string>
    <string name="progress_format">Question %1$d/%2$d</string>
    <string name="swipe_instruction">Swipe left to continue</string>
    <string name="past_results">Past Quiz Results</string>
    <string name="score_format">Score: %1$d/6</string>
</resources>